base/elasticsearch/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-client
  namespace: logging
  labels:
    app: elasticsearch
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/component: client
    app.kubernetes.io/part-of: efk
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
      name: rest
