base/elasticsearch/service-headless.yaml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: logging
  labels:
    app: elasticsearch
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/component: master
    app.kubernetes.io/part-of: efk
spec:
  selector:
    app: elasticsearch
  clusterIP: None
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
